updated to support maestro 4.0.0 and changed to java 21